docs: Enhance documentation across Java and Spring domains
- Updated Java Cheatsheets index with detailed descriptions and planned topics.
- Expanded Java Design Patterns index to include GoF patterns and learning paths.
- Revised Java Evolution index to clarify version changes and key features.
- Improved Java Type System index with comprehensive explanations of type concepts.
- Enhanced JVM Internals index with detailed topics on memory management and garbage collection.
- Updated Java Modules index to explain JPMS and module-related concepts.
- Expanded Multithreading & Concurrency index to cover advanced concurrency topics.
- Revised Object-Oriented Programming index to include modern Java features like records and sealed classes.
- Enhanced Kubernetes index with detailed descriptions of core concepts and Spring Boot integration.
- Updated Messaging index to cover Kafka, RabbitMQ, and async patterns in depth.
- Revised Overviews index to clarify the purpose and structure of overview pages.
- Enhanced Spring Boot index with detailed descriptions of auto-configuration and testing strategies.
- Updated Spring Data index to cover JPA, transactions, and caching strategies.
- Revised Spring Framework index to clarify core concepts and their importance.
- Enhanced Spring Security index with detailed descriptions of authentication and authorization mechanisms.
- Updated System Design index to cover architectural principles and design patterns.
- Revised Testing index to provide a comprehensive overview of testing strategies and tools.
- Enhanced Version Control index to clarify Git concepts and collaboration best practices.
- Updated Web & REST index to cover HTTP fundamentals, REST design, and API documentation.